Wizard for existing PHP sources finished

--- a/php.project/src/org/netbeans/modules/php/project/ui/wizards/RunAsRemoteWeb.form
+++ b/php.project/src/org/netbeans/modules/php/project/ui/wizards/RunAsRemoteWeb.form
@@ -187,6 +187,9 @@
           <ResourceString bundle="org/netbeans/modules/php/project/ui/wizards/Bundle.properties" key="LBL_BrowseIndex" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="indexFileBrowseButtonActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
