Finished with the UI change to ToolsPanel. The Dev Hosts combobox now changes and triggers an update to the rest of the panel. The update isn't happening correctly but I want to commit/push the change so I can fix the problem from Windows (it will be easier there).

--- a/cnd/src/org/netbeans/modules/cnd/ui/options/ToolsPanel.form
+++ b/cnd/src/org/netbeans/modules/cnd/ui/options/ToolsPanel.form
@@ -888,7 +888,7 @@
         </Constraint>
       </Constraints>
     </Component>
-    <Component class="javax.swing.JButton" name="btAddDevHost">
+    <Component class="javax.swing.JButton" name="btEditDevHost">
       <Properties>
         <Property name="mnemonic" type="int" editor="org.netbeans.modules.i18n.form.FormI18nMnemonicEditor">
           <ResourceString bundle="org/netbeans/modules/cnd/ui/options/Bundle.properties" key="MNEM_AddDevHost" replaceFormat="java.util.ResourceBundle.getBundle(&quot;{bundleNameSlashes}&quot;).getString(&quot;{key}&quot;)"/>
