--- a/java.source/src/org/netbeans/modules/java/ui/FmtTabsIndents.form
+++ b/java.source/src/org/netbeans/modules/java/ui/FmtTabsIndents.form
@@ -28,10 +28,6 @@
               <EmptySpace max="-2" attributes="0"/>
           </Group>
           <Group type="102" alignment="0" attributes="0">
-              <Component id="absoluteLabelIndentCheckBox" min="-2" max="-2" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
-          </Group>
-          <Group type="102" alignment="0" attributes="0">
               <Component id="expandTabCheckBox" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
@@ -39,26 +35,31 @@
               <Group type="103" groupAlignment="1" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
                       <Component id="rightMarginLabel" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace pref="118" max="32767" attributes="0"/>
+                      <EmptySpace min="-2" pref="118" max="-2" attributes="0"/>
                       <Component id="rightMarginField" min="-2" pref="37" max="-2" attributes="0"/>
+                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                   </Group>
-                  <Group type="102" alignment="1" attributes="0">
+                  <Group type="102" alignment="0" max="-2" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="tabSizeLabel" min="-2" max="-2" attributes="0"/>
                           <Component id="indentSizeLabel" min="-2" max="-2" attributes="0"/>
                           <Component id="continuationIndentSizeLabel" min="-2" max="-2" attributes="0"/>
                           <Component id="labelIndentLabel" min="-2" max="-2" attributes="0"/>
+                          <Component id="tabSizeLabel" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="1" attributes="0">
+                      <EmptySpace min="-2" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="1" max="-2" attributes="0">
                           <Component id="labelIndentField" linkSize="2" alignment="0" pref="36" max="32767" attributes="1"/>
                           <Component id="continuationIndentSizeField" linkSize="2" alignment="0" pref="36" max="32767" attributes="1"/>
-                          <Component id="indentSizeField" alignment="0" pref="36" max="32767" attributes="0"/>
-                          <Component id="tabSizeField" alignment="0" pref="36" max="32767" attributes="0"/>
+                          <Component id="indentSizeField" alignment="0" min="-2" pref="36" max="-2" attributes="0"/>
+                          <Component id="tabSizeField" alignment="0" min="-2" pref="36" max="-2" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
-              <EmptySpace min="-2" pref="455" max="-2" attributes="0"/>
+              <EmptySpace min="-2" max="-2" attributes="0"/>
+          </Group>
+          <Group type="102" alignment="0" attributes="0">
+              <Component id="absoluteLabelIndentCheckBox" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -68,8 +69,8 @@
               <Component id="expandTabCheckBox" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="8" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="tabSizeLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="tabSizeField" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="tabSizeLabel" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
@@ -81,23 +82,23 @@
                   <Component id="continuationIndentSizeLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="continuationIndentSizeField" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace max="-2" attributes="0"/>
+              <EmptySpace min="-2" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="labelIndentLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="labelIndentField" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace max="-2" attributes="0"/>
+              <EmptySpace min="-2" max="-2" attributes="0"/>
               <Component id="absoluteLabelIndentCheckBox" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="indentTopLevelClassMembersCheckBox" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="indentCasesFromSwitchCheckBox" min="-2" max="-2" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
+              <EmptySpace min="-2" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="rightMarginLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="rightMarginField" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="122" max="32767" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
