--- a/maven.samples/samples_src/MavenScrumToys/src/main/webapp/resources/components/bigPostit.xhtml
+++ b/maven.samples/samples_src/MavenScrumToys/src/main/webapp/resources/components/bigPostit.xhtml
@@ -46,13 +46,8 @@ Other names may be trademarks of their respective owners.
       xmlns:ui="http://java.sun.com/jsf/facelets">
 
     <composite:interface>
-        <composite:valueHolder name="postitLabel"/>
-        <composite:valueHolder name="postitText"/>
-        <composite:valueHolder name="postitLabel2"/>
-        <composite:valueHolder name="postitText2"/>
-        <composite:valueHolder name="postitLabel3"/>
-        <composite:valueHolder name="postitText3"/>
-
+        <composite:attribute name="postitLabel"/>
+        <composite:attribute name="postitText"/>
     </composite:interface>
  
     <composite:implementation>
@@ -62,12 +57,8 @@ Other names may be trademarks of their respective owners.
                 <br></br>
                 </f:verbatim>
             </f:facet>
-            <h:outputText value="#{postitLabel}"/>
-            <h:outputText value="#{postitText}"/>            
-            <h:outputText value="#{postitLabel2}"/>
-            <h:outputText value="#{postitText2}"/>
-            <h:outputText value="#{postitLabel3}"/>
-            <h:outputText value="#{postitText3}"/>
+            <h:outputText value="#{cc.attrs.postitLabel}"/>
+            <h:outputText value="#{cc.attrs.postitText}"/>
         </h:panelGrid>
     </composite:implementation>
 </html>
