--- a/maven.samples/samples_src/MavenScrumToys/src/main/webapp/resources/components/postitLink.xhtml
+++ b/maven.samples/samples_src/MavenScrumToys/src/main/webapp/resources/components/postitLink.xhtml
@@ -47,8 +47,7 @@ Other names may be trademarks of their respective owners.
 
     <ui:composition template="postit.xhtml">
         <ui:define name="main">
-            <h:link outcome="#{cc.attrs.url}" value="#{postitText}"
-                    rendered="#{cc.attrs.url != null}">
+            <h:link outcome="#{cc.attrs.url}" value="#{cc.attrs.postitText}" rendered="#{cc.attrs.url != null}">
                 <f:param name="#{cc.attrs.paramName}" value="#{cc.attrs.paramValue}" />
             </h:link>
         </ui:define>
