--- a/findbugs/src/org/netbeans/modules/findbugs/options/FindBugsPanel.form
+++ b/findbugs/src/org/netbeans/modules/findbugs/options/FindBugsPanel.form
@@ -103,7 +103,11 @@
                     <Property name="contentType" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
                       <ResourceString bundle="org/netbeans/modules/findbugs/options/Bundle.properties" key="FindBugsPanel.description.contentType" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
                     </Property>
+                    <Property name="editable" type="boolean" value="false"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="hyperlinkUpdate" listener="javax.swing.event.HyperlinkListener" parameters="javax.swing.event.HyperlinkEvent" handler="descriptionHyperlinkUpdate"/>
+                  </Events>
                 </Component>
               </SubComponents>
             </Container>
