--- a/javafx2.samples/src/org/netbeans/modules/javafx2/samples/PanelOptionsVisual.form
+++ b/javafx2.samples/src/org/netbeans/modules/javafx2/samples/PanelOptionsVisual.form
@@ -19,10 +19,11 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Component id="lblPlatform" min="-2" max="-2" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
-              <Component id="platformComboBox" pref="315" max="32767" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <Component id="platformComboBox" min="-2" pref="232" max="-2" attributes="0"/>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="btnManagePlatforms" min="-2" max="-2" attributes="1"/>
+              <EmptySpace pref="26" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
